# structured_concurrency_example

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml  test-all.sh  test-clang-concepts.sh  test-clang-format.sh
src/: conn_data.hpp  handle_request.hpp  handle_transform_requests.cpp  handle_transform_requests.hpp  img_transform.cpp  img_transform.hpp  main.cpp  parsed_uri.cpp  parsed_uri.hpp  profiling.hpp  read_http_request.hpp  write_http_response.hpp
src/http_server/: create_response.cpp  create_response.hpp  headers.hpp  http_request.hpp  http_response.hpp  request_parser.cpp  request_parser.hpp  to_buffers.cpp  to_buffers.hpp
src/io/: async_accept.hpp  async_read.hpp  async_write.hpp  connection.cpp  connection.hpp  io_context.hpp  listening_socket.cpp  listening_socket.hpp  out_buffer.hpp
src/io/detail/: native_file_desc_t.hpp  oper_body_base.hpp  oper_type.hpp  poll_io_loop.cpp  poll_io_loop.hpp
src/senders/: sender_from_ftor.hpp
